# agentic_design_patterns

./: .env.sample  README.md  pyproject.toml
src/agents/: multi_agent.py  react_agent.py  self_reflection_agent.py  tool_agent.py
src/agents/helpers/: agent_factory.py  crew.py  memory.py  tool.py
src/utils/: demo_tools.py  extraction.py  logging.py
tests/agents/: test_agent.py  test_react_agent.py  test_self_reflection_agent.py  test_tool_agent.py
